fix bug with playing video on iphone

--- a/broccoli/BroccoliMvc/Content/Site.css
+++ b/broccoli/BroccoliMvc/Content/Site.css
@@ -584,18 +584,26 @@ hr {
 .cabinet-menu h4 {
     margin-top: 25px;
     margin-bottom: 10px;
+    padding-left: 15px;
     font-family: Segoe UI;
     cursor: default;
     color: #98cb66;
 }
 
 .cabinet-menu h5 {
-    margin-bottom: 5px;
+    display: block;
+    padding: 5px 15px;
+    text-align: left;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 15px;
 }
 
 .cabinet-menu h5:hover {
-    color: #98cb66;
-    cursor: pointer;
+    text-decoration: none;
+    background-color: #F8F8F8 !important;
 }
 
 .cabinet-menu .notifications-count {
